compiler/tests/compile-error/wrong-main-type.arret
(import [stdlib base])

(defn main! () -> Int 1) ;~ ERROR `(-> Int)` is not a `(->! ())`